--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -44,73 +44,75 @@
 					<div class="container">
 
 						<!-- Content -->
-								<h1> Mask FAQs </h1>
-								</br>
-								</br>
-								<section class = "box">
-									<h3> Why are masks important? </h3>
-									<p>
-										Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then contraction of coronavirus can be prevented.
-									</p>
-								</section>
-								<section class = "box">
-									<h3> What types of materials are best for masks? </h3>
-									<p>
-										A study tested multiple different materials (cloth, wool, etc.) and checked their ability to stop the virus as well as breathability (because you can't have a mask without being able to breath) The top five materials are denim, bed sheets, paper towels, canvas, and shop towels. NOT SCARFS, NOT T-SHIRTS, NOT PILLOWCASES. The study recommends using more than one layer of fabric to ensure safety. 
-									</p>
-								</section>
-								<section class = "box">
-									<h3> When can I be "exempt" from wearing a mask? </h3>
-									<p>
-										If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical.
-									</p>
-								</section>
-								<section class = "box">
-									<h3> What types of masks are there? </h3>
-										<ol>
-											<li> The CDC recommends for those going out in public wearing a scarf or homemade mask to stop droplets from coming in contact with the mouth and preventing the spread of the virus to other people. See more on homemade masks to the right. </li>
-											<li> N-95 Masks are the most affective masks and can block 95 percent of particles .3 microns or larger, according to the FDA. They have a metal nose piece that the wearer can use to mold their face and have a snug fit, a filter built-in with air holes to make breathing easier, and ear loops that ensure a comfortable mask experience. BUT note that these masks are not a luxury and that they should be reserved for healthcare workers and other people on the frontline. </il>
-											<li> While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection. </il>	
-										</ol>
-								</section>
-								<!-- <section>
-									<header>
-										<h3>Something else</h3>
-									</header>
-									<p>
-										Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-										placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus.
-										Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-										placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor.
-									</p>
-									<p>
-										Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus.
-									</p>
-								</section>
-								<section>
-									<header>
-										<h3>So in conclusion ...</h3>
-									</header>
-									<p>
-										Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-										eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-										elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-										sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-										Maecenas sagittis convallis justo vel mattis.
-									</p>
-								</section> -->
-							</article>
+							<header>
+								<div class = "a"> <h1> Mask FAQs </h1> </div>
+							</header>
+							</br>
+							</br>
+							<section class = "box">
+								<h3> Why are masks important? </h3>
+								<p>
+									Masks protect coronavirus infected droplets from entering and exiting your mouth. If these droplets are unable to enter your respiratory system, then contraction of coronavirus can be prevented.
+								</p>
+							</section>
+							<section class = "box">
+								<h3> What types of materials are best for masks? </h3>
+								<p>
+									A study tested multiple different materials (cloth, wool, etc.) and checked their ability to stop the virus as well as breathability (because you can't have a mask without being able to breath) The top five materials are denim, bed sheets, paper towels, canvas, and shop towels. NOT SCARFS, NOT T-SHIRTS, NOT PILLOWCASES. The study recommends using more than one layer of fabric to ensure safety. 
+								</p>
+							</section>
+							<section class = "box">
+								<h3> When can I be "exempt" from wearing a mask? </h3>
+								<p>
+									If you are doing in action which does not require you to be around other people, you don't have to wear a mask. For example, walking outside does not require a mask, but shopping at the grocery store, in which other people can be close by and touch things that you touch, wearing a mask is critical.
+								</p>
+							</section>
+							<section class = "box">
+								<h3> What types of masks are there? </h3>
+									<ol>
+										<li> The CDC recommends for those going out in public wearing a scarf or homemade mask to stop droplets from coming in contact with the mouth and preventing the spread of the virus to other people. See more on homemade masks to the right. </li>
+										<li> N-95 Masks are the most affective masks and can block 95 percent of particles .3 microns or larger, according to the FDA. They have a metal nose piece that the wearer can use to mold their face and have a snug fit, a filter built-in with air holes to make breathing easier, and ear loops that ensure a comfortable mask experience. BUT note that these masks are not a luxury and that they should be reserved for healthcare workers and other people on the frontline. </il>
+										<li> While not as effective as the N-95 mask, the surgical mask, often known as "the face mask", still provides the wearer protection from large droplets and splashes. They have ear loops and a rectangular shape (you'll see them on TV shows like Grey's Anatomy and ER), but their loose fit doesn't provide an absolute barrier against the coronavirus. Many doctors use them, so the CDC recommends that surgical masks also be spared for healthcare workers. The main problem with surgical masks is that they can only be used once, so it is important that we prevent mass shortages of these masks and instead try other methods of protection. </il>	
+									</ol>
+							</section>
+							<!-- <section>
+								<header>
+									<h3>Something else</h3>
+								</header>
+								<p>
+									Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
+									placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
+									eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
+									elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
+									sit amet nullam consequat feugiat dolore tempus.
+									Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
+									placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
+									eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
+									elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor.
+								</p>
+								<p>
+									Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
+									eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
+									elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
+									sit amet nullam consequat feugiat dolore tempus.
+								</p>
+							</section>
+							<section>
+								<header>
+									<h3>So in conclusion ...</h3>
+								</header>
+								<p>
+									Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
+									eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
+									elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
+									sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
+									Maecenas sagittis convallis justo vel mattis.
+								</p>
+							</section> -->
+						</article>
 
-					</div>
-				</section>
+				</div>
+			</section>
 
 			<!-- Footer -->
 				<!-- <section id="footer">
