--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -53,8 +53,8 @@
 										</header>
 										<ul>
 											<li> Coronavirus is spread by droplets having flown out of our mouths. To prevent these droplets from coming out of our mouths and preventing these droplets from entering into our respiratory system, we wear masks. </li>
-											<li> Studies show that mask wearing easily reduces the possibility of spreading and recieving coronavirus. </li>
-											<li> Hong Kong is a great example showing how mask wearing can save lives. Despite having a similar density and proximity to Wuhan (epicenter of the Coronavirus), it has only 4 coronavirus deaths, compared to Wuhan's 2,500. </li>
+											<li> Studies show that mask-wearing easily reduces the possibility of spreading and receiving coronavirus. </li>
+											<li> Hong Kong is a great example showing how wearing masks can save lives. Despite having a similar density and proximity to Wuhan (the epicenter of the Coronavirus), it has only 4 coronavirus deaths, compared to Wuhan's 2,500. </li>
 											<li> When the Czech Republic started using masks, it greatly reduced its number of cases and deaths per day. </li>
 										</ul>
 									</section>
@@ -88,7 +88,7 @@
 												<h2>To Mask or Not to Mask: The Problem</h2>
 											</header>
 											<p>
-												Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor is able to control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pask the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion.
+												Hidalgo's decision to mandate face covering while out in public is a risky and most definitely polarizing move, with the great debate between citizens' rights and government control the victim. This issue of public health and safety was definitely an aggressive move, and many are arguing whether it is constitutional or not. Under Chapter 418 of the Texas Government Code, a county judge can serve as an emergency management director of their county and have the same power granted to the governor. When a crisis like the coronavirus or Hurricane Harvey hits, the judge or mayor can control the movement of people of their county. In the event of COVID-19, Lina Hidalgo used her granted power to pass the mask law. A petition claims that Hidalgo broke the law because Greg Abbott, governor of Texas, has not put on as restrictive orders. They also add that the mandate infringes on their personal "liberty and freedom". Because of public outcry and the threat of being sued Lina Hidalgo changed the order from a mandate to a suggestion.
 											</p>
 										</section>
 									</article>
